@@ -2,7 +2,7 @@
 // 2014.2.23
 // All the opcodes needed for communication.
 
-#define OP_SHOULDSTOP    0x50
+#define OP_SHOULDWAIT    0x50
 #define OP_SHOULDSTART   0x60
 
 #define OP_DIGITAL_ON    0x00
