@@ -21,14 +21,12 @@ void init_servo(rov_servo *s,rov_pin pin,int d){
 // This automagically scales [-100,100] -> [0,1023].
 // return: 0 on success, non-zero on failure.
 int m_setpower(rov_arduino *a,size_t n,char p){
-    if (n >= a->motorc){
+    if (n >= a->motorc || p < -100 || p > 100){
         return -1;
     }
-    if (!analog_write(a,a->motorv[n]->pin,(p + 100) * 5.115 + 0.5)){
-        a->motorv[n]->power = p;
-        return 0;
-    }
-    return -1;
+    analog_write(a,a->motorv[n]->pin,(p + 100) * 5.115 + 0.5);
+    a->motorv[n]->power = p;
+    return 0;;
 }
 
 // Sets a servo to an angle in degrees
@@ -38,9 +36,7 @@ int s_setangle(rov_arduino *a,size_t n,int d){
     if (n >= a->servoc || d < 0 || d > a->servov[n]->max){
         return -1;
     }
-    if (!analog_write(a,a->servov[n]->pin,(d / 360.0) * 1023)){
-        a->servov[n]->loc = d;
-        return 0;
-    }
-    return -1;
+    analog_write(a,a->servov[n]->pin,(d / 360.0) * 1023);
+    a->servov[n]->loc = d;
+    return 0;
 }
